[gd_scene load_steps=8 format=3 uid="uid://cev248w6qbej8"]

[ext_resource type="ArrayMesh" uid="uid://d3c3q86jeicyp" path="res://Assets/Models/MovingPlat.obj" id="1_a62lw"]
[ext_resource type="Script" uid="uid://08l3bsd5uh5j" path="res://Scripts/moving_platform.gd" id="1_xw7d1"]
[ext_resource type="Texture2D" uid="uid://d1d284bymb76d" path="res://Assets/Textures/SwitchTexture.png" id="2_it75e"]
[ext_resource type="AudioStream" uid="uid://bk7dalqy0alhq" path="res://Assets/Sound Effects/shimmering-object-79354.mp3" id="4_6lqnc"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_0jyv5"]
albedo_texture = ExtResource("2_it75e")
texture_filter = 0

[sub_resource type="CylinderShape3D" id="CylinderShape3D_vdfnl"]
height = 0.461717
radius = 1.0

[sub_resource type="BoxShape3D" id="BoxShape3D_pxkfk"]
size = Vector3(1.495, 0.217438, 1.495)

[node name="MovingPlatform" type="AnimatableBody3D"]
sync_to_physics = false
script = ExtResource("1_xw7d1")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = ExtResource("1_a62lw")
surface_material_override/0 = SubResource("StandardMaterial3D_0jyv5")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CylinderShape3D_vdfnl")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
speed_scale = 0.0

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("4_6lqnc")
max_distance = 150.0
bus = &"SFX"

[node name="Area3D" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.291482, 0)
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("BoxShape3D_pxkfk")

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
